[gd_scene load_steps=5 format=3 uid="uid://doqkk4asrw2yh"]

[ext_resource type="Script" path="res://src/ui/card_inventory/card_inventory.gd" id="1_mc0xr"]
[ext_resource type="PackedScene" uid="uid://dwvcw8ov07o52" path="res://src/cards/card_pack/card_display/card_display.tscn" id="2_p8euf"]
[ext_resource type="Theme" uid="uid://clmipikp5y4xp" path="res://assets/art/ui/UI backgrounds/deckbg_theme.tres" id="2_u7a7i"]
[ext_resource type="FontFile" uid="uid://rwidue26o0fh" path="res://assets/fonts/ShortXurkit-2Xdv.ttf" id="3_0p7on"]

[node name="CardInventory" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mc0xr")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -363.0
offset_top = -196.0
offset_right = 361.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_u7a7i")

[node name="title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 12.0
offset_right = 20.0
offset_bottom = 35.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_0p7on")
text = "Current Deck"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 12.0
offset_top = 340.0
offset_right = 668.0
offset_bottom = 380.0
theme_override_constants/separation = 92

[node name="cards_in_deck_lable" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_0p7on")
text = "Deck Size: "

[node name="cards_in_draw_pile" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_0p7on")
text = "Current Draw Pile Size: "

[node name="shuffle_timer" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_0p7on")
text = "Time until shuffle finished: "

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 42.0
offset_right = -170.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 10
metadata/_edit_lock_ = true

[node name="card_display" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display2" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display3" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display4" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display5" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display6" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display7" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display8" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display9" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display10" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display11" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display12" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display13" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display19" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display20" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display21" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display22" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display23" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display24" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display25" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display26" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display27" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display28" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display29" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display30" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display14" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display15" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display16" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display17" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display18" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display31" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display32" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display33" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display34" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display35" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display36" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display37" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display38" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display39" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display40" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display41" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display42" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display43" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display44" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display45" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display46" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display47" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display48" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display49" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display50" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="card_display51" parent="Panel/ScrollContainer/GridContainer" instance=ExtResource("2_p8euf")]
layout_mode = 2

[node name="tooltip" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 565.0
offset_top = 41.0
offset_right = -15.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.709804, 0.709804, 0.709804, 1)
theme_override_fonts/normal_font = ExtResource("3_0p7on")
text = "Temp text; card descriptions go here"

[node name="merge_button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 646.0
offset_top = 4.0
offset_right = 704.0
offset_bottom = 35.0
theme_override_fonts/font = ExtResource("3_0p7on")
text = "Merge"

[node name="back_button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 7.0
offset_top = 5.0
offset_right = 64.0
offset_bottom = 36.0
theme_override_fonts/font = ExtResource("3_0p7on")
text = "Back"

[connection signal="pressed" from="Panel/merge_button" to="." method="_on_merge_button_pressed"]
[connection signal="pressed" from="Panel/back_button" to="." method="_on_back_button_pressed"]
